Merge in parallel - need to be changed